Changes relative to tre-0.20:
  * Added VECTOR?.
  * EVERY much faster on lists.
  * Added DIRECTORY to get directory lists.
  * Added DUMP to CL target.
  * Added GETENV.
  * Added standard set functions SET-DIFFERENCE,
    SET-EXCLUSIVE-OR and SUBSET?.
  * New ARGUMENTS returns command-line arguments.
  * New GETENV returns environment variables.
  * File ~/.tre.sh is shell evaluated to update environment variables
    before launching tré.
  * JS class methods may be declared static.
  * PHP class members and methods may be declared static,
    protected or private.
  * Return values of constructors are ignored.
  * PHP classes may inherit.
  * Removed obsolete JavaScript DOM features:
    * GET-CANVAS-BY-CLASS-NAME
    * ancestor getters
    * FORM, IFRAME and VIDEO element utilities.
  * TRE-ELEMENT:
    * All event methods have been replaced by method ON, like
      done in jQuery.
    * Historic class, ID and name attribute methods have been
      removed.
    * General attribute accessors have been replaced by methods
      ATTR, ATTR? and ATTRS.
    * Removed opacity setter and rotation.
    * Accessor CSS replaces all other style accessors.
  * LOAD-STRING is now READ-FROM-STRING.
  * CONCAT-STRINGTREE is now FLATTEN.
  * QUASIQUOTE-SPLICE turns JavaScript objects into keyword/
    value lists.
  * New MAKE-JS-PROJECT and MAKE-PHP-PROJECTS compile with
    all available modules for each target.
  * READ-SYMBOL: Vertical bar '|' starts symbols with no
    case conversion, also allowing special characters until
    the next vertical bar.  '\' is the escape character.
  * Fixed(?) base64 functions.
  * Fixed =-REF.
  * Set *ASSERT?* to T by default.
  * Moved external modules back in.  Their separate
    repositories on Github will be removed.

Changes of tre-0.20 relative to tre-0.19:
  * Works with PHP-8.
  * SUBSEQ (JS/PHP): Allow strings of any length.  (Ugly
    hack from the old days.)
  * @, DYNAMIC-MAP return lists of arguments are arrays.