@@ -8,8 +8,8 @@
 
 (defmacro %%make-json-object (&rest props)
   `(%%%make-json-object
-       ,@(mapcan [list (? (symbol? _.)
-                          (list-string (camel-notation (string-list (symbol-name _.))))
-                          _.)
-                        ._.]
-                 (group props 2))))
+     ,@(+@ [list (? (symbol? _.)
+                    (list-string (camel-notation (string-list (symbol-name _.))))
+                   _.)
+                 ._.]
+           (group props 2))))
