@@ -2,7 +2,7 @@
   (with-gensym g
    `(let ,g ,x
       (?
-        ,@(mapcan [? ._
-                     `((,_. ,g) ,@._)
-                     _]
-                  (group body 2))))))
+        ,@(+@ [? ._
+                 `((,_. ,g) ,@._)
+                 _]
+              (group body 2))))))
