@@ -3,8 +3,8 @@
           (keys x)))
 
 (fn props-klist (x)
-  (mapcan [list (make-keyword (upcase _)) (slot-value x _)]
-          (keys x)))
+  (+@ [list (make-keyword (upcase _)) (slot-value x _)]
+      (keys x)))
 
 (fn alist-props (x)
   (& x
