@@ -2,8 +2,8 @@
   (with (r #'((head tail-permutations)
                (& head
                   (!? tail-permutations
-                      (mapcan #'((h)
-                                  (@ [. h (copy-list _)] !))
-                              head)
+                      (+@ #'((h)
+                              (@ [. h (copy-list _)] !))
+                          head)
                       (@ #'list head)))))
     (& x (r x. (apply #'permutate .x)))))
