@@ -4,6 +4,6 @@
   (++! *tag-counter*))
 
 (defmacro with-compiler-tag (tags &body body)
-  `(with ,(mapcan [`(,_ (make-compiler-tag))]
-                  (ensure-list tags))
+  `(with ,(+@ [`(,_ (make-compiler-tag))]
+              (ensure-list tags))
      ,@body))
