@@ -5,9 +5,9 @@
           (hashkeys (expander-macros (transpiler-macro-expander)))
           (hashkeys (expander-macros (codegen-expander)))
           *macros*))
-    (!? (mapcan [!= (symbol-name _)
-                  (& (not (tail? ! "_TREEXP")
-                          (head? ! "~"))
-                     (list !))]
+    (!? (+@ [!= (symbol-name _)
+              (& (not (tail? ! "_TREEXP")
+                      (head? ! "~"))
+                 (list !))]
            (hashkeys !))
       (warn "Unused functions: ~A." (late-print ! nil)))))
