@@ -1,4 +1,5 @@
 Changes relative to tre-0.20:
+  * New macro +@ to shortcut MAPCAN.
   * Added VECTOR?.
   * EVERY much faster on lists.
   * Added DIRECTORY to get directory lists.
